# MARS-Flight-System-Firmware

./: .DESIGN DOCUMENT.docx.icloud  .clang-format  .configs.txt.icloud  .gitignore  .platformio.ini.icloud  README.md  main.js
DevGroundM/: .DevGROUND.mlapp.icloud  index.html
DevGroundM/RelayFirmware/: CMakeLists.txt
DevGroundM/css/: styles.css
DevGroundM/deprecated/: ui.html
DevGroundM/js/: elements.js  main.js
LIAM/analysis/: angles_view.py
LIAM/dev/: angles_pid.py  control.py  decomposer.py
MATLAB/Path_Simulation/: .ExportProcess.m.icloud  .Instructions_Description.m.icloud  .Path.m.icloud  .Path2.m.icloud  .UI.m.icloud  .addInitialAndEndpoint.m.icloud  .dialogBox.m.icloud  .errorChecks.m.icloud  .exportDescription.m.icloud  .findDistanceBetweenNodes.m.icloud  .findNeighborNodes.m.icloud  .findNeighborNodesEXP.m.icloud  .findPairInMap.m.icloud  .main_scriptFile.m.icloud  .pic.png.icloud  .plotButtonPushed.m.icloud  .showPlotAS.m.icloud
base-firmware/: partitions.csv  sdkconfig  sdkconfig.old
base-firmware-V2/: CMakeLists.txt  prj.conf  sierra.overlay
base-firmware-V2/src/: main.c  main.cpp
base-firmware-V2/src/BMI088/: CMakeLists.txt  bmi088.c  bmi088.h
base-firmware-V2/src/BMI270/: bmi270.c  bmi270.h  bmi270_defs.h  bmi270_interface.c  bmi270_interface.h
base-firmware-V2/src/BMP280/: _barometerEntry.cpp  _barometerEntry.h  bmi270.c  bmp2.h  driver_bmp280.c  driver_bmp280.h  driver_bmp280_interface.c  driver_bmp280_interface.h
base-firmware-V2/src/BMP280/deprecated/: bmp2_defs.h  common.c  common.h
base-firmware-V2/src/Battery/: CMakeLists.txt  _battery.c  _battery.h
base-firmware-V2/src/Display/: CMakeLists.txt  ssd1306.c  ssd1306.h  ssd1306_fonts.h
base-firmware-V2/src/Fan_cooling/: CMakeLists.txt  fan_relay.c  fan_relay.h
base-firmware-V2/src/ICM42688P/: CMakeLists.txt  icm42688.c  icm42688.h
base-firmware-V2/src/LSM303/: lsm303_platform.c  lsm303_platform.h
base-firmware-V2/src/Logging/: CMakeLists.txt  logger.c
base-firmware-V2/src/Logging/include/: logger_config.h
base-firmware-V2/src/PID/: CMakeLists.txt
base-firmware-V2/src/PTAM/: CMakeLists.txt  _ptam.c  _ptam.h
base-firmware-V2/src/Servo/: servo.c  servo.h
base-firmware-V2/src/System/: CMakeLists.txt  VBV.c  VBV.h  _state.c  _state.h  sys_controller.c  sys_controller.h
base-firmware-V2/src/TCA9548A/: multiplexer.c  multiplexer.h
base-firmware-V2/src/datalink/: CMakeLists.txt
base-firmware-V2/src/datalink/bt_attributes/: bt_attributes.h
base-firmware-V2/src/datalink/bt_data/: bt_data.c
base-firmware-V2/src/system/: CMakeLists.txt  VBV.cpp  _state.cpp  _state.h  sys_controller.cpp  sys_controller.h
base-firmware/main/: CMakeLists.txt  base-firmware.cpp  os_config.h
base2-firmware/: CMakeLists.txt  sdkconfig
base2-firmware/main/: CMakeLists.txt  base2-firmware.cpp
base3UDrive-firmware/: .cproject  .mxproject  .project  base3.ioc
test/: miscasm.s  misctesting.c  misctesting.cpp
test/I2C/: i2c_conf.hpp
test/I2C_Master/: CMakeLists.txt  I2C_Master_api.cpp  I2C_master.hpp  i2c.cpp  sdkconfig
test/I2C_Master/main/: CMakeLists.txt  I2C_Master_example.c  I2c_Master_testing.cpp
test/I2C_Slave/: CMakeLists.txt  i2c_slave.c  i2c_slave.cpp  i2c_slave.h  i2c_slave.hpp  sdkconfig
test/I2C_Slave/main/: CMakeLists.txt  I2C_Slave_testing.c  I2C_Slave_testing.cpp  I2c_slave.cpp  I2c_slave_example.cpp
test/LORA/: CMakeLists.txt
test/Logging/: logger.c  logger.cpp  logger.h  logger.hpp  logger_config.h
test/OTA_Sys/: CMakeLists.txt
test/OTA_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
test/PID/: _pid.h
test/server/server-test/components/HALX/: CMakeLists.txt  HMC5883L.h  I2Cdev.h  MPU6050.h  MotorController.cpp  MotorController.h  Vmotor.cpp  Vmotor.h  _SD_FileSystem.cpp  _SD_FileSystem.h  _barometerEntry.cpp  _barometerEntry.h  _battery.cpp  _battery.h  atgm336H.h  bmx280.cpp  bmx280.h  bmx280_bits.h  bno055.h  esp_idf_lib_helpers.h  fan_relay.cpp  fan_relay.h  icm42688.cpp  icm42688.h  mg90s_servo.cpp  mg90s_servo.h  minmea.h  nrf24.cpp  nrf24.h  servoControl.h  ssd1306.cpp  ssd1306.h
(+262 files in other folders)
