idf_component_register(SRCS   "I2c_Master_testing.cpp"
                                "../I2C_Master_api.cpp"
                                "../../Logging/logger.cpp"
                                "../../statemachine/_ptam.cpp"
                       INCLUDE_DIRS "/home/alucard/esp/esp-idf-cxx/" "/home/alucard/esp/esp-idf-cxx/include"
)
